@@ -41,6 +41,9 @@
    - stevesk@cvs.openbsd.org 2002/05/28 16:45:27
      [monitor_mm.c]
      print strerror(errno) on mmap/munmap error; ok markus@
+   - stevesk@cvs.openbsd.org 2002/05/28 17:28:02
+     [uidswap.c]
+     format spec change/casts and some KNF; ok markus@
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
@@ -725,4 +728,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2155 2002/06/06 20:33:06 mouring Exp $
+$Id: ChangeLog,v 1.2156 2002/06/06 20:38:49 mouring Exp $
